Fix bug where main-container rendered in wrong position

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -10,16 +10,11 @@ html {
     font-size: 16px;
     background-color: #2F3F4F;
     color: white;
-    overflow-y: hidden;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    margin-top: calc(40vh - 76px);
-    transition: margin-top 0.3s ease-out;
-    overflow-y: hidden;
-    /* justify-content: center; */
 }
 
 h1 {
@@ -38,7 +33,9 @@ a {
 }
 
 #main-container{
-    position: sticky;
+    position: relative;
+    margin-top: 40vh;
+    transition: margin-top 0.3s ease-out;
     z-index: 10;
 }
 
